--- a/view/style.css
+++ b/view/style.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     background-color: rgb(57, 169, 219);
     font-family: Rubik, Arial;
 }
@@ -8,12 +8,9 @@ form {
     line-height: 25px;
     height: 80%;
     overflow: auto;
-    /* text-align: left; */
-    
-		/* font-family: 'Montserrat' */
 }
 
-input{
+input {
     line-height: normal;
 }
 
@@ -25,14 +22,9 @@ h1 {
     text-align: center;
 }
 
-/* #burger {
-    max-height: 30%;
-} */
-
-#header{
-    font-size: 30px
-    
-}
+/* #header {
+    font-size: 30px;
+} 
 
 #overlay {
     width: 40%;
@@ -44,5 +36,49 @@ h1 {
 
 .url label,
 .alias label {
+    margin-right: 25px;
+} */
+
+body {
+    background-color: rgb(57, 169, 219);
+    font-family: Rubik, Arial;
+}
+
+form {
+    text-align: center;
+    line-height: 30px;
+    height: 80%;
+    overflow: auto;
+}
+
+form hr {
+    width: 15%;
+}
+
+h1 {
+    text-align: center;
+}
+
+#burger {
+    max-height: 30%;
+}
+
+#overlay {
+    width: 80%;
+    margin: 3% auto;
+    height: 95vh;
+    background-color: rgba(255, 255, 255, 0.9);
+    border-radius: 40px;
+}
+
+#logo {
+    height: 100px;
+    display: block;
+    margin: auto;
+}
+
+
+.toppings label,
+.cheesy label {
     margin-right: 25px;
 }
