update - Prototype version

--- a/view/app.html
+++ b/view/app.html
@@ -65,14 +65,14 @@
         <section id="overlay">
             <div >
                 <section id="header">
-                    <h1>Create a shortened URL!</h1>
+                    <h1>Create a short URL!</h1>
                     <hr>
                 </section>
                 </br>
                 <form action="/submission" method="POST">
-                    <label for="url">Enter a long URL</label>
+                    <label for="originalURL">Enter a long URL </label> 
                     <br>
-                    <input id="url" type="text" name="url" style="width: 375px">
+                    <input id="originalURL" type="text" name="originalURL" style="width: 375px">
                     <br>
                     <br>
                     <label for="alias"> Custom alias (Optional) </label>
