--- a/view/app.html
+++ b/view/app.html
@@ -55,9 +55,11 @@
             border-radius: 40px;
         }
 
-        .url label,
+        .originalURL label,
         .alias label {
-            margin-right: 25px;
+             text-align: left;
+            margin-right: 30px;
+            
         } 
      </style>
 
@@ -69,24 +71,25 @@
                     <hr>
                 </section>
                 </br>
-                <form action="/submission" method="POST">
-                    <label for="originalURL">Enter a long URL </label> 
-                    <br>
-                    <input id="originalURL" type="text" name="originalURL" style="width: 375px">
-                    <br>
-                    <br>
-                    <label for="alias"> Custom alias (Optional) </label>
-                    <br>
-                    <tt class="basecontent">http://borisLongToShort.com/</tt>
-                    <input id="alias" type="text" name="alias">
-                    <!-- <small id='alias' style="display:none"> error input</small> -->
-                    <br>
-                    <input type="submit" value="Submit">
+                <form action="/create" method="POST">
+                     <div class="gorup">
+                        <label for="originalURL" class="originalURL">Enter a long URL </label> 
+                        <br>
+                        <input  id="originalURL" type="url" name="originalURL" style="width: 375px" placeholder="For example: https://www.google.com/" required="required">
+                        <br>
+                        <br>
+                    </div>
+                    <div class="group">
+                        <label for="alias"> Custom alias (Optional) </label>
+                        <br>
+                        <tt class="basecontent">http://localhost:8000/</tt>
+                        <input id="alias" type="text" name="alias" pattern="[a-zA-Z0-9]">
+                        <span class="validity"></span>
+                        <p>Note: Custom alias must be valid characters(A-Z,a-z,0-9) .</p>
+                    </div>
+                    <button> Submit </button>
                 </form>
-
             </div>
-
-        
         </section>
     </body>    	
 </html>
