update server code

--- a/view/notAvailable.html
+++ b/view/notAvailable.html
@@ -41,6 +41,17 @@
             
         }
 
+        h2 {
+            text-align: center;
+            height: 1vh;
+            
+        }
+        
+        h3 {
+            text-align: center;
+            height: 3vh;
+        }
+
         #header {
             font-size: 30px;
             height: 15vh
@@ -49,10 +60,15 @@
         #overlay {
             width: 40%;
             margin: 3% auto;
-            height: 65vh;
+            height: 65vh auto;
             background-color: rgba(255, 255, 255, 0.9);
             border-radius: 40px;
         }
+         /* #not {
+            margin: 3% auto;
+            height: 65vh auto;
+            border-radius: 40px;
+        } */
 
         .originalURL label,
         .alias label {
@@ -66,10 +82,13 @@
         <section id="overlay">
             <div >
                 <section id="header">
-                    <h1>Create a short URL!</h1>
-                    <hr>
+                   <h1>Create a short URL!</h1>
+                  <hr>
                 </section>
-                </br>
+                <section id="not">
+                <h2 style="color:red" > Alias is not available</h2>
+                <h3>Short URL can't be created, please try again below: </h3>
+                </section>
                 <form action="/POST/url_resource" method="POST">
                      <div class="gorup">
                         <label for="originalURL" class="originalURL">Enter a long URL </label> 
