UPD. update api path and README

--- a/view/index.html
+++ b/view/index.html
@@ -32,15 +32,15 @@
 
         h1 {
             text-align: center;
-            
+
             height: 7vh;
-            
+
         }
 
          h2 {
             text-align: center;
             height: 1vh;
-            
+
         }
 
         #header {
@@ -60,8 +60,8 @@
         .alias label {
              text-align: left;
             margin-right: 30px;
-            
-        } 
+
+        }
      </style>
 
     <body>
@@ -71,9 +71,9 @@
                     <h1>Create a short URL!</h1>
                     <hr>
                 </section>
-                <form action="/POST/url_resource" method="POST">
+                <form action="/api/url_resource" method="POST">
                      <div class="gorup">
-                        <label for="originalURL" class="originalURL">Enter a long URL </label> 
+                        <label for="originalURL" class="originalURL">Enter a long URL </label>
                         <br>
                         <input  id="originalURL" type="url" name="originalURL" style="width: 375px" placeholder="For example: https://www.google.com/" required="required">
                         <br>
@@ -91,5 +91,5 @@
                 </form>
             </div>
         </section>
-    </body>    	
+    </body>
 </html>
