--- a/view/index.html
+++ b/view/index.html
@@ -82,7 +82,7 @@
                     <div class="group">
                         <label for="alias"> Custom alias (Optional) </label>
                         <br>
-                        <tt class="basecontent">http://localhost:8000/</tt>
+                        <tt class="basecontent"> {{.HostDomain}} </tt>
                         <input id="alias" type="text" name="alias" pattern="[a-zA-Z0-9]{0,30}">
                         <span class="validity"></span>
                         <p>Note: Custom alias must be valid characters(A-Z,a-z,0-9) .</p>
