UPD. update dockerfile

--- a/view/notAvailable.html
+++ b/view/notAvailable.html
@@ -88,7 +88,7 @@
                 <section id="not">
                 <!-- <h2 style="color:red" > Alias is not available</h2> -->
                 <h2 style="color:red" >{{.Title}}</h2>
-                <h3>Short URL can't be created, please try again below: </h3>
+                <h3>Short URL can't be created, please try again </h3>
                 </section>
                 <form action="/api/url_resource" method="POST">
                      <div class="gorup">
