UPD. test deploy

--- a/view/create.html
+++ b/view/create.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
-        <title>Welcome Long 2 short </title>
+        <title>URL shortener service </title>
         <!-- <title>Forms Review</title> -->
     </head>
       <style>
@@ -33,9 +33,7 @@
 
         h1 {
             text-align: center;
-            
             height: 7vh;
-            
         }
 
         #header {
@@ -54,13 +52,13 @@
         .url label,
         .alias label {
             margin-right: 25px;
-        } 
+        }
      </style>
     <body>
         <section id="overlay">
             <div >
                 <section id="header">
-                    
+
                     <h1>Short URL was created!</h1>
                     <hr>
                 </section>
@@ -74,5 +72,5 @@
 
             </div>
         </section>
-    </body>    	
+    </body>
 </html>
